5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1674_1879.log
== TEST (2019-05-01 19:54:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("horas extras: "))
b = float(input("horas que funcionario faltou: "))
h = (a) - ((1/4) * b)
if((a>=0) and (b>=0)):
	if(h>400):
		print("R$500.00")
	else:
		print("R$100.00")
-- OUTPUT:
R$500.00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:56:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("horas extras: "))
b = float(input("horas que funcionario faltou: "))
h = (a) - ((1/4) * b)
	print(a, "extras e", b, "de falta")
if(h>400):
	print("R$500.00")
else:
	print("R$100.00")
-- ERROR:
File "XXXX", line 5
    print(a, "extras e", b, "de falta")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:57:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("horas extras: "))
b = float(input("horas que funcionario faltou: "))
h = (a) - ((1/4) * b)
print(a, "extras e", b, "de falta")
if(h>400):
	print("R$500.00")
else:
	print("R$100.00")
-- OUTPUT:
420.0 extras e 20.0 de falta
R$500.00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 19:57:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("horas extras: "))
b = float(input("horas que funcionario faltou: "))
h = (a) - ((1/4) * b)
print(a, "extras e", b, "de falta")
if(h>400):
	print("R$500.00")
else:
	print("R$100.00")
-- EXECUTION TIME:
0.192319
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$500.00
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$100.00
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$100.00
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:58:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("horas extras: "))
b = float(input("horas que funcionario faltou: "))
h = (a) - ((1/4) * b)
print(a, "extras e", b, "de falta")
if(h>400):
	print("R$500.00")
else:
	print("R$100.00")
-- OUTPUT:
420.0 extras e 20.0 de falta
R$500.00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 19:59:29) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("horas extras: "))
b = float(input("horas que funcionario faltou: "))
h = (a) - ((1/4) * b)
print(a, "extras e", b, "de falta")
if(h>400):
	print("R$ 500.0")
else:
	print("R$ 100.0")
-- EXECUTION TIME:
0.205474
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
